Some style changes to avoid overlapping when project name or activity name being too long. Shows dollar sign only when there is value. Default proposal type to NEW (#684)

--- a/client/wfprev-war/src/main/angular/src/app/components/edit-project/project-fiscals/project-fiscals.component.scss
+++ b/client/wfprev-war/src/main/angular/src/app/components/edit-project/project-fiscals/project-fiscals.component.scss
@@ -396,10 +396,11 @@
         position: absolute;
         font-size: 16px;
         color: #282828;
+        left:12px;
     }
 
     input {
-        padding-left: 24px;
+        padding-left: 24px !important;
     }
 }
 
