--- a/client/wfprev-war/src/main/angular/src/app/components/list-panel/projects-list/projects-list.component.scss
+++ b/client/wfprev-war/src/main/angular/src/app/components/list-panel/projects-list/projects-list.component.scss
@@ -184,7 +184,9 @@
           flex:1;
           font-size: 20px;
           font-style: normal;
-          font-weight: 700
+          font-weight: 700;
+          word-break: break-word;
+          overflow-wrap: break-word;
         }
 
         mat-panel-title {
